--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@types/google-map-react": "^2.1.3",
+    "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
     "google-map-react": "^2.1.10",
     "keen-slider": "^5.5.1",
@@ -40,6 +42,8 @@
     "sass": "^1.42.1"
   },
   "babel": {
-    "plugins": ["inline-react-svg"]
+    "plugins": [
+      "inline-react-svg"
+    ]
   }
 }
