--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,7 +67,7 @@
 
     /* Advanced Options */
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true,       /* Disallow inconsistently-cased references to the same file. */
-    // "include": ["test.d.ts"]
+    "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
+    "jsx": "preserve",
   }
 }
