--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/google-map-react": "^2.1.3",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
     "google-map-react": "^2.1.10",
